# cpp_samples

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
Coroutines/: CMakeLists.txt
Coroutines/src/: co_awaitable_abstraction.hpp  co_generator.hpp  co_iterator.hpp  co_lazy_function.hpp  co_scheduler.hpp  co_tree_traversal.hpp  custom_coroutine.hpp  custom_coroutine_handle.hpp  main.cpp
StdFunctions/: CMakeLists.txt
StdFunctions/src/: main.cpp  std_ref_wrappes.hpp
aggregates/: CMakeLists.txt
aggregates/src/: aggredates_pack_expasion.cxx  aggregates_construct.cxx  aggregates_ctad.cxx  aggregates_initialization.cxx  main.cpp
attributes/: CMakeLists.txt
attributes/src/: attr_nodiscard.cxx  attr_nounique_addres.cxx  main.cpp
compile-time-features/: CMakeLists.txt
compile-time-features/src/: compile_loop.hpp  constexpr.hpp  ctad_alias.hpp  main.cpp  sieve_primes.hpp
concepts/: CMakeLists.txt
concepts/src/: custom_concepts.hpp  main.cpp
concurrent_features/: CMakeLists.txt
concurrent_features/src/: async_features.cxx  barrier_samples.cxx  free_lock_samples.cxx  jthread_sample.cxx  latch_samples.cxx  locks_samples.cxx  main.cxx  mutual_exclusion_samples.cxx  route.cxx
constexpr/: CMakeLists.txt
constexpr/src/: allocations.cxx  consteval.cxx  main.cpp  trivial_initialization.cxx  virtual_method.cxx
expected/: CMakeLists.txt
expected/src/: main.cpp
lambdas/: CMakeLists.txt
lambdas/src/: capture_pack_expansion.cxx  capture_this.cxx  generic_lambda.cxx  main.cpp  stateless_lambda.cxx
language_features/: CMakeLists.txt
language_features/src/: callable_features.cxx  deducing_this.cxx  forwarding_types.cxx  main.cxx
memory_samples/: CMakeLists.txt
memory_samples/src/: allocation_samples.cxx  main.cxx
method_specifications/: CMakeLists.txt
method_specifications/src/: main.cxx  method_specifications.cxx
moduiles/: CMakeLists.txt
moduiles/src/: main.cxx  root_module.cxx
move_semantic/: CMakeLists.txt
move_semantic/src/: main.cpp
ranges/: CMakeLists.txt
ranges/src/: converts.hpp  ranges_snippets.cpp
ranges/src/include/: filters.hpp  ranges_init_loop.hpp
ranges/test/: CMakeLists.txt  filters_test.cpp
smart_pointers/: CMakeLists.txt
smart_pointers/src/: inout_ptr.cxx  main.cxx
std_algo_caveats/: CMakeLists.txt
std_algo_caveats/src/: main.cpp
structured_bindings/: CMakeLists.txt
structured_bindings/src/: main.cpp  structured_bindings.cxx
user_utilities/: CMakeLists.txt  UserUtilitiesConfig.cmake  UserUtilitiesConfigVersion.cmake
user_utilities/src/: benchmarks.cxx  print_tools.cxx  user_utilities.cxx
utilities/: CMakeLists.txt  UtilitiesConfig.cmake  UtilitiesConfigVersion.cmake
utilities/src/: print_collection.cxx
variable_functions/: CMakeLists.txt
variable_functions/src/: main.cxx
variant/: CMakeLists.txt
variant/src/: create_variant.cxx  main.cxx  visit_variant.cxx
